assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "./muli.css";
@import "./source-sans-pro.css";

.logo {
    width: 63px;
    height: 55px;
}

.logo__text {
    height: 55px;
}

@keyframes bounce {
    0%, 100% { transform: translate(0); }
    20% { transform: rotateX(20deg) translateY(1px) rotate(-3deg); }
    40% { transform: translateY(-5px) rotate(3deg) scale(1.1); }
}

.gda span {
    @apply inline-block;

    backface-visibility: hidden;
}

.gda:hover span {
    animation: bounce 0.45s;
}

.gda span:nth-child(2) { animation-delay: 0.05s; }
.gda span:nth-child(3) { animation-delay: 0.1s; }
.gda span:nth-child(4) { animation-delay: 0.15s; }
.gda span:nth-child(5) { animation-delay: 0.2s; }
.gda span:nth-child(6) { animation-delay: 0.25s; }
.gda span:nth-child(7) { animation-delay: 0.3s; }
.gda span:nth-child(8) { animation-delay: 0.35s; }
.gda span:nth-child(9) { animation-delay: 0.4s; }
.gda span:nth-child(10) { animation-delay: 0.45s; }
.gda span:nth-child(11) { animation-delay: 0.5s; }
.gda span:nth-child(12) { animation-delay: 0.55s; }
.gda span:nth-child(13) { animation-delay: 0.6s; }
.gda span:nth-child(14) { animation-delay: 0.65s; }
.gda span:nth-child(15) { animation-delay: 0.7s; }
.gda span:nth-child(16) { animation-delay: 0.75s; }
.gda span:nth-child(17) { animation-delay: 0.8s; }
.gda span:nth-child(18) { animation-delay: 0.85s; }

.index-section {
  width: calc(33% - 1rem);
}

.svg-inline {
    display: inline-block;
    font-size: inherit;
    height: 1em;
    width: 1em;
    vertical-align: -.125em;
}

.social-icon ­{
    display: inline-block;
    border: none;
    vertical-align: middle;
}

  .svg-inline--fa.fa-w-1 {
    width: 0.0625em; }
  .svg-inline--fa.fa-w-2 {
    width: 0.125em; }
  .svg-inline--fa.fa-w-3 {
    width: 0.1875em; }
  .svg-inline--fa.fa-w-4 {
    width: 0.25em; }
  .svg-inline--fa.fa-w-5 {
    width: 0.3125em; }
  .svg-inline--fa.fa-w-6 {
    width: 0.375em; }
  .svg-inline--fa.fa-w-7 {
    width: 0.4375em; }
  .svg-inline--fa.fa-w-8 {
    width: 0.5em; }
  .svg-inline--fa.fa-w-9 {
    width: 0.5625em; }
  .svg-inline--fa.fa-w-10 {
    width: 0.625em; }
  .svg-inline--fa.fa-w-11 {
    width: 0.6875em; }
  .svg-inline--fa.fa-w-12 {
    width: 0.75em; }
  .svg-inline--fa.fa-w-13 {
    width: 0.8125em; }
  .svg-inline--fa.fa-w-14 {
    width: 0.875em; }
  .svg-inline--fa.fa-w-15 {
    width: 0.9375em; }
  .svg-inline--fa.fa-w-16 {
    width: 1em; }
  .svg-inline--fa.fa-w-17 {
    width: 1.0625em; }
  .svg-inline--fa.fa-w-18 {
    width: 1.125em; }
  .svg-inline--fa.fa-w-19 {
    width: 1.1875em; }
  .svg-inline--fa.fa-w-20 {
    width: 1.25em; }

